# audiodrive

./: LICENSE
Audio32/: CMakeLists.txt  README.md
Audio32/docs/: design.md
Audio32/examples/: basic_playback.cpp
Audio32/include/: audio_driver.hpp  audio_io.hpp  audio_unit.hpp  avfoundation.hpp  buffer.hpp  coreaudio.hpp  dsp.hpp  midi.hpp  mixer.hpp  platform.hpp
Audio32/src/: audio_driver.cpp  avfoundation.cpp  buffer.cpp  coreaudio.cpp  dsp.cpp  platform.cpp  simd.cpp  wireless_audio.cpp
Audio32/tests/: audio32_tests.cpp
docs/: design.md
include/: coreaudio.hpp  dsp.hpp  metal_visualization.hpp  simd.hpp  wireless_audio.hpp
src/: audio_driver.cpp  audio_io.cpp  audio_unit.cpp  metal_visualization.cpp  midi.cpp  mixer.cpp
tests/: audio32_tests.cpp
